# guru-quotes

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml  settings.py  test.db
app/: main.py
app/db/: engine.py  gurus.py  seeding.py
app/models/: AppStatus.py  Guru.py  Quote.py
app/routers/: gurus.py  quotes.py  status.py
guru_quotes/: data.py  gurus.json  main.py  models.py
tests/: conftest.py  test_api.py  test_smoke.py
tests/fixtures/: guru_quotes.py  gurus.py
tests/guru/: test_get_guru.py
tests/guru_quotes/: test_create_quote.py  test_delete_quote.py  test_read_quotes.py  test_update_quotes.py
tests/gurus/: conftest.py  test_create_guru.py  test_get_guru_by_id.py  test_get_guru_list_pagination.py  test_get_guru_quotes.py  test_get_guru_quotes_by_id.py  test_get_gurus_by_id.py  test_get_gurus_list.py  test_update_guru.py
tests/utils/: model.py
